rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row6_unsupported_unicode_scalar_emoji.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"a\\u{1F642}b\")"
---
source: "a🙂b"
lex:   Err [lexical] "found unknown token '🙂'" @ [SourceRange([1, 2, 0])]
parse: Err [lexical] "found unknown token '🙂'" @ [SourceRange([1, 2, 0])]
