rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row6_unsupported_unicode_scalar_emoji_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"a\\u{1F642}b\")"
---
source: "a🙂b"
tokens: 3
issues: 1
final:  Err [lexical] "found unknown token '🙂'" @ [SourceRange([1, 5, 0])]
