rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row7_ascii_unknown_then_non_ascii.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"~ \\u{4E9E}\")"
---
source: "~ 亞"
lex:   Err [lexical] "found unknown token '~'" @ [SourceRange([0, 1, 0])]
parse: Err [lexical] "found unknown token '~'" @ [SourceRange([0, 1, 0])]
