rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row7_ascii_unknown_then_non_ascii_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"~ \\u{4E9E}\")"
---
source: "~ 亞"
tokens: 3
issues: 1
final:  Err [lexical] "found unknown token '~'" @ [SourceRange([0, 1, 0])]
