rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row8_eof_ish_crash_input_1_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"{\\\"\\u{78E}\\u{78E}\\0\\0\\0\\\"\\\".\")"
---
source: "{\"ގގ\0\0\0\"\"."
tokens: 3
issues: 1
final:  Err [lexical] "unterminated string literal" @ [SourceRange([10, 12, 0])]
