rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row8_eof_ish_crash_input_2.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"(/=e\\\"\\u{616}\\u{75D}\\\"\\\"\")"
---
source: "(/=e\"\u{616}ݝ\"\""
lex:   Err [lexical] "unexpected EOF while parsing" @ [SourceRange([10, 10, 0])]
parse: Err [lexical] "unexpected EOF while parsing" @ [SourceRange([10, 10, 0])]
